--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -6,9 +6,9 @@
     app:cardUseCompatPadding="true"
     app:cardElevation="0dp"
     app:cardCornerRadius="8dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:background="@color/white">
 
     <LinearLayout
@@ -18,19 +18,6 @@
         android:orientation="vertical"
         android:background="@color/white">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center_vertical"-->
-<!--            android:orientation="horizontal">-->
-
-
-<!--            <ImageView-->
-<!--                android:id="@+id/image_category"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:srcCompat="@drawable/ic_launcher_background" />-->
-
             <TextView
                 android:id="@+id/category_name"
                 android:layout_width="wrap_content"
@@ -38,11 +25,22 @@
                 android:layout_marginLeft="8dp"
                 android:textColor="@color/white"
                 android:textSize="25sp"
-                android:layout_marginTop="75dp"
+                android:layout_marginTop="65dp"
                 android:textStyle="bold" />
-<!--        </LinearLayout>-->
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GO"
+                android:layout_marginLeft="200dp"
+                android:textColor="@color/black"
+                android:background = "@drawable/roundedbutton_yellow" />
+
 
     </LinearLayout>
+
+
 
 
 </androidx.cardview.widget.CardView>
