--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button_login"
+            android:id="@+id/button_profile"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
