--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
 
 
     <TextView
-        android:id="@+id/back_to_login"
+        android:id="@+id/back_to_login22"
         android:layout_width="274dp"
         android:layout_height="43dp"
         android:layout_marginTop="76dp"
@@ -48,7 +48,7 @@
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_to_login" />
+        app:layout_constraintTop_toBottomOf="@+id/back_to_login22" />
 
     <EditText
         android:id="@+id/edit_password"
