--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardUseCompatPadding="true"
     app:cardElevation="0dp"
@@ -25,30 +25,30 @@
 
             <TextView
                 android:id="@+id/exercise_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_width="140dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="24dp"
                 android:maxWidth="220dp"
-                android:textColor="@color/white"
+                android:text="Name"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/exercise_image"
-                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintHorizontal_bias="0.373"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title"
                 tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/exercise_description"
-                android:layout_width="61dp"
-                android:layout_height="20dp"
+                android:layout_width="121dp"
+                android:layout_height="32dp"
                 android:text="Description"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/exercise_image"
+                app:layout_constraintHorizontal_bias="0.313"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/exercise_name"
-                app:layout_constraintVertical_bias="0.49"
+                app:layout_constraintVertical_bias="0.318"
                 tools:visibility="visible" />
 
             <ImageView
@@ -60,6 +60,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.307"
                 tools:srcCompat="@tools:sample/avatars"
                 tools:visibility="visible" />
 
