--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +13,7 @@
     android:background="@color/white">
 
     <LinearLayout
-        android:id="@+id/category_item_ll"
+        android:id="@+id/exercise_item_ll"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:orientation="vertical"
@@ -23,37 +24,46 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/category_name"
+                android:id="@+id/exercise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:maxWidth="220dp"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.07"
+                app:layout_constraintEnd_toStartOf="@+id/exercise_image"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.109" />
+                tools:text="Title"
+                tools:visibility="visible" />
 
-            <Button
-                android:id="@+id/button"
+            <TextView
+                android:id="@+id/exercise_description"
+                android:layout_width="61dp"
+                android:layout_height="20dp"
+                android:text="Description"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/exercise_image"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/exercise_name"
+                app:layout_constraintVertical_bias="0.49"
+                tools:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/exercise_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/roundedbutton_yellow"
-                android:text="START"
-                android:textColor="@color/black"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
     </LinearLayout>
 
