--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -94,6 +94,7 @@
         android:id="@+id/button_register"
         android:layout_width="200dp"
         android:layout_height="61dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="126dp"
         android:background="@drawable/roundedbutton"
         android:text="REGISTER"
