--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -16,6 +16,7 @@
         android:hint="Age"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +34,7 @@
         android:hint="Email"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +52,7 @@
         android:hint="Username"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_email"
         android:background="@drawable/rounded_edittext"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"/>
 
@@ -83,6 +87,7 @@
         android:hint="Confirm Password"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
