--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:orientation="vertical"
-        android:background="@color/gray">
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,11 +29,11 @@
                 android:layout_marginTop="16dp"
                 android:maxWidth="220dp"
                 android:text="Name"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 app:layout_constraintEnd_toStartOf="@+id/exercise_image"
-                app:layout_constraintHorizontal_bias="0.333"
+                app:layout_constraintHorizontal_bias="0.222"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />
@@ -55,8 +55,8 @@
 
             <ImageView
                 android:id="@+id/exercise_image"
-                android:layout_width="115dp"
-                android:layout_height="109dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
